// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show component with the image of the product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffee Mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage should show title correctly with custom title 1`] = `
<img
  alt="Coffee Mug"
  className="productImg undefined"
  src="https://hola.org"
/>
`;
